--- a/html/list.html
+++ b/html/list.html
@@ -7,15 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
-        <tr>
-            <th colspan="2" style="background-color: blue;">12</th>
-            <th rowspan="2">3<br>6</th>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>5</td>
-        </tr>
-    </table>
+    <ul>
+        <li>졸려</li>
+        <li>등아파</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ul>
+    <ol>
+        <li>졸려</li>
+        <li>등아파</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ol>
 </body>
 </html>
