--- a/html/exam07.html
+++ b/html/exam07.html
@@ -11,7 +11,7 @@
     <br><br>
     아이디
     <br>
-    <input type="text" value="@naver.com">
+    <input type="text" placeholder="@naver.com">
     <br><br>
     비밀번호
     <br>
@@ -27,7 +27,7 @@
     <br><br>
     생년월일
     <br>
-    <input type="text" value="년(4자)"> 
+    <input type="text" placeholder="년(4자)"> 
     <select name="" id="">
         <option value="month">월</option>
         <option value="jan">1</option>
@@ -43,7 +43,7 @@
         <option value="nov">11</option>
         <option value="dec">12</option>
     </select>
-    <input type="text" value="일">
+    <input type="text" placeholder="일">
     <br><br>
     성별
     <br>
@@ -56,7 +56,7 @@
     <br><br>
     본인 확인 이메일(선택)
     <br>
-    <input type="text" value="선택입력">
+    <input type="text" placeholder="선택입력">
     <br><br><br>
     휴대전화
     <br>
@@ -67,10 +67,10 @@
         <option value="">몰디브 +960</option>
     </select>
     <br>
-    <input type="text" value="전화번호 입력">
+    <input type="text" placeholder="전화번호 입력">
     <input type="submit" value="인증번호 받기">
     <br>
-    <input type="text" disabled value="인증번호 입력하세요">
+    <input type="text" disabled placeholder="인증번호 입력하세요">
     <br><br>
     <input type="submit" value="가입하기">
        
