실습문제 4, 5 더 간결하게 수정

--- a/js/exam04.html
+++ b/js/exam04.html
@@ -23,22 +23,8 @@
     </style>
     <script>
         let selected = null;
-        function changeHtmlColor(color){
-            let text = document.getElementById('span01');
-            selectedNemo(text);
-            text.style.backgroundColor = color
-            text.style.color = 'black'
-        }
-        
-        function changeCssColor(color){
-            let text = document.getElementById('span02');
-            selectedNemo(text);
-            text.style.backgroundColor = color
-            text.style.color = 'black'
-        }
-
-        function changeJavascriptColor(color){
-            let text = document.getElementById('span03');
+        function changeColor(text, color){
+            
             selectedNemo(text);
             text.style.backgroundColor = color
             text.style.color = 'black'
@@ -56,9 +42,9 @@
     </script>
 </head>
 <body>
-    <span id="span01" class="click" onclick="changeHtmlColor('white')">html</span>
-    <span id="span02" class="click" onclick="changeCssColor('white')">css</span>
-    <span id="span03" class="click" onclick="changeJavascriptColor('white')">javascript</span>
+    <span id="span01" class="click" onclick="changeColor(this,'white')">html</span>
+    <span id="span02" class="click" onclick="changeColor(this,'white')">css</span>
+    <span id="span03" class="click" onclick="changeColor(this,'white')">javascript</span>
   
 </body>
 </html>
