230510 실전문제와 form....

--- a/jquery/exam02.html
+++ b/jquery/exam02.html
@@ -14,6 +14,10 @@
         #text{
             width: 200px;
         }
+
+        #title{
+            border: 1px black solid;
+        }
     </style>
     <script>
       $(function () {
@@ -29,7 +33,7 @@
     </script>
   </head>
   <body>
-    <div>기사등록하기</div>
+    <div id="title">기사등록하기</div>
     <div id = "text">
     </div>
     <input id="btn" type="button" value="등록하기" />
