230511 게임만들기...

--- a/jquery/exam2_01.html
+++ b/jquery/exam2_01.html
@@ -39,15 +39,13 @@
       아이디
       <input type="email" name="" id="" /><br />
       비밀번호
-      <input type="text" name="" id="" required minlength="5" /><br />
+      <input type="password" name="" id="" required minlength="5" /><br />
       성별
       <label for="radio1">남자</label>
       <input type="radio" id="radio1" name="options" value="1" />
       <label for="radio2">여자</label>
       <input type="radio" id="radio2" name="options" value="2" /> <br />
 
-      <!--  <input type="radio" name="" id="" >남자 
-          <input type="radio" name="" id="" >여자 <br> -->
       직업
       <select name="job" required>
         <option value="empty" class="option"></option>
@@ -57,18 +55,17 @@
       </select>
       <br />
       취미
-      <input type="checkbox" name="" id="" /> 개발
-      <input type="checkbox" name="" id="" /> 게임
-      <input type="checkbox" name="" id="" /> 낚시
+      <input type="checkbox"> 개발
+      <input type="checkbox"> 게임
+      <input type="checkbox"> 낚시
       <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <!-- 이부분을 이렇게 밖에 못해? -->
-      <input type="checkbox" name="" id="" /> 운동
-      <input type="checkbox" name="" id="" /> 독서
-      <input type="checkbox" name="" id="" /> 음악감상
+      <input type="checkbox"> 운동
+      <input type="checkbox"> 독서
+      <input type="checkbox"> 음악감상
 
       <br />
-      <input type="reset" value="취소" name="" id="" />
-      <input type="submit" value="회원가입" name="" id="" />
+      <input type="reset" value="취소">
+      <input type="submit" value="회원가입">
     </form>
   </body>
 </html>
