작은 적과 닿으면 적이 사라짐! 이제 새로 나타나게 해야 함

--- a/gameMY/exam01.html
+++ b/gameMY/exam01.html
@@ -121,6 +121,7 @@
                 $(pompom[0]).height(function (i, h) {
                   return h + 5;
                 });
+                $(enemy[i]).hide();//닿으면 사라짐.. 이 후에 enemy.show() 한 후 위취값... 
 
                 // pompom[0].style.width = (parseInt(pompom[0].style.width)+5)+'px';
                 // pompom[0].style.height = (parseInt(pompom[0].style.height)+5)+'px';
